# clasaua

./: .gitignore  CHANGELOG.txt  LICENSE.md  LICENSE.txt  README.md  TODO.txt  VERSION.txt  clasaua.py  clasaua.xcf  clasificacion.ods  clubs.csv  events.csv  pyinstaller_win.bat  pyinstaller_win.spec  pyproject.toml  requirements.in  test_clasificacion_2021.ods
clasaua/: launcher.py
clasaua/lib/: clasaua.py  clubs.py
clasaua/locale/: messages_gl.mo
classes/: clasaua.py  clubes.py  config.py  date_time.py  files.py  report_base.py  report_base_.py  report_base_clasaua.py
locale/: 01_xerar_pot.sh  gl.po  messages.pot  messages_gl.po
